force-app/main/default/objects/OrderShipto__c/OrderShipto__c.object-meta.xml
<CustomObject>
    <label>Order Ship To</label>
    <nameField>
        <displayFormat>Ord Ship to {00000}</displayFormat>
        <label>Order Ship to No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Ship To&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>