force-app/main/default/objects/OrderShipto__c/fields/numberOfStudents__c.field-meta.xml
<CustomField>
    <fullName>numberOfStudents__c</fullName>
    <formula>IF(  ShiptoAccount__r.RecordType.DeveloperName = &apos;B2BEducational&apos;, TEXT( ShiptoAccount__r.NumberofStudents__c) , &apos;NA&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Students</label>
    <type>Text</type>
</CustomField>