force-app/main/default/objects/OrderShipto__c/fields/ShiptoAccount__c.field-meta.xml
<CustomField>
    <fullName>ShiptoAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Ship To&apos;s</relationshipLabel>
    <relationshipName>OrderShiptos</relationshipName>
    <type>Lookup</type>
</CustomField>