force-app/main/default/objects/OrderShipto__c/fields/ShipToName__c.field-meta.xml
<CustomField>
    <fullName>ShipToName__c</fullName>
    <formula>ShiptoAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship-To Name</label>
    <type>Text</type>
</CustomField>